src/main.css
/* Resets --------------------------*/
html,
body {
  margin: 0;
  padding: 0;
}
ul {
  list-style: none;
  padding: 0;
}

/* Typography -----------------------*/
/* Heebo thin for titles*/
/* Open Sans for general sans-serif (short lines)*/
/* Georgia for text blocks & quotes*/

/* h1, h2, h3 {*/
/*   font-family: Heebo;*/
/*   font-weight: 100;*/
/* }*/

body {
  font-family: sans-serif;
  line-height: 1.25;
  font-weight: 500;
}

.text {
  font-family: Georgia, serif;
  line-height: 1.5;
}

/* Layout --------------------*/

.container {
  padding: 1rem;
}

@media (min-width: 720px) {
  .container {
    width: 720px;
    margin: 0 auto;
  }
}

section:not(.hero) {
  padding: 1rem 0;
}

/* Hero*/

blockquote {
  font-family: Georgia, serif;
  font-size: 18px;
  font-style: italic;
  text-align: center;
  margin: 0.25em 0;
  padding: 0.35em 40px;
  line-height: 1.45;
  position: relative;
}

blockquote:before {
  display: block;
  padding-left: 10px;
  content: '\201C';
  font-size: 80px;
  position: absolute;
  left: -1rem;
  top: -1rem;
}

blockquote cite {
  font-size: 14px;
  display: block;
  margin-top: 5px;
}

blockquote cite:before {
  content: '\2014 \2009';
}

.hero {
  background-color: #fff;
  color: #000;

  /* Vertically responsive for mobile full page*/
  height: 100vh;
  min-height: 300px; /* Avoid squashing*/

  /* Center in parent*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;

  position: relative; /* For invitation to scroll down */
}

/* Invitation to scroll down*/
.hero::after {
  content: ' ';
  display: block;
  width: 50px;
  height: 2px;
  border-radius: 1px;
  margin: 0 auto;
  background-color: #ddd;
  position: absolute;
  bottom: 1.5rem;
}

.hero .picture {
  width: 150px;
  height: 150px;
  border-radius: 100%;
}

@keyframes heroImgAppear {
  from {
    opacity: 0;
    transform: scale(0.8);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}
@keyframes heroTxtAppearV {
  from {
    opacity: 0;
    transform: translateY(3vh);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}
@keyframes heroTxtAppearH {
  from {
    opacity: 0;
    transform: translateX(3vw);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.hero .picture {
  opacity: 0;
  animation: 0.75s ease 0s 1 heroImgAppear forwards;
}

.hero .details {
  opacity: 0;
  animation: 0.75s ease 0s 1 heroTxtAppearV forwards;
}

.hero h1 {
  font-weight: 300;
  font-family: Heebo, sans-serif;
}
.hero .title {
  margin: 0;
  color: #aaa;
}
.title {
  font-family: Heebo, sans-serif;
  font-weight: 400;
}

/* Large screens*/
@media (min-width: 960px) {
  .hero {
    flex-direction: row; /* todo: broken by container*/
    font-size: 125%;
  }
  .hero .picture {
    width: 200px;
    height: 200px;
    margin: 0 3rem;
  }
  .hero .details {
    text-align: left;
    animation: 0.75s ease 0s 1 heroTxtAppearH forwards;
  }
}

/* Section Styles*/

section.about {
  background-color: #333;
  color: #ddd;
}

.button {
  display: inline-block;
  padding: 0.75rem 1rem;
  font-weight: 100;
  border: solid 1px;
  border-radius: 3px;
}

.contact.button {
  color: limegreen;
  text-decoration: none;
  text-transform: uppercase;
  font-family: Heebo;
  font-weight: 300;
  margin: 2rem 0;
  animation: pulse 2s ease 0s 3;
}

/* Footer | Links*/

footer {
  background-color: #555;
  color: #ddd;
  text-align: center;
}

footer .secondary {
  color: #888;
  font-size: 0.75rem;
}

footer ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
footer li {
  margin: 0 10px;
}

footer a {
  opacity: 0.5;
  transition: opacity 0.15s ease-in-out;
}

footer a:hover {
  opacity: 1;
}

footer .icon {
  width: 40px;
  height: 40px;
  padding: 5px 10px;
}

